--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
       color: #333;
     }
 
-    input[type="text"] {
+    input[type="url"] {
       width: 100%;
       padding: 12px 16px;
       font-size: 16px;
@@ -40,7 +40,7 @@
       transition: border-color 0.2s;
     }
 
-    input[type="text"]:focus {
+    input[type="url"]:focus {
       border-color: #007bff;
     }
 
